# dynamatic

./: CMakeLists.txt  README_Install.md
Buffers/: CMakeLists.txt
Frontend/: CMakeLists.txt
dot2vhdl/: CMakeLists.txt
elastic-circuits/: CMakeLists.txt
